style.css
/* ... */
/* Print Styles */
@media screen {
    .print-area { display: none; }
}

@media print {
    @page {
        margin: 15mm 10mm 15mm 15mm; /* Trên Phải Dưới Trái (nới rộng bề ngang để tiêu đề cùng 1 hàng) */
    }
    body * {
        visibility: hidden;
    }
    .print-area, .print-area * {
        visibility: visible;
    }
    body.batch-print #batchPrintWrapper, body.batch-print #batchPrintWrapper * {
        visibility: visible;
    }
    body.batch-print .print-area {
        position: relative !important;
        page-break-after: always;
    }
    .print-area {
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        font-family: "Times New Roman", Times, serif;
        color: #000;
        font-size: 13pt;
        line-height: 1.5;
    }
    .print-stt-box {
        position: absolute;
        top: 0px;
        right: 0;
        border: 1px solid #000;
        padding: 5px 15px;
        font-weight: bold;
    }
    .print-header {
        display: flex;
        justify-content: space-between;
        text-align: center;
        margin-bottom: 30px;
        margin-top: 50px;
    }
    .print-header-left {
        width: 40%;
    }
    .print-header-right {
        width: 60%;
        white-space: nowrap;
    }
    .print-hr {
        width: 50%;
        margin: 5px auto;
        height: 0;
        background-color: transparent;
        border: none;
        border-top: 1px solid #000;
    }
    .print-title {
        text-align: center;
        font-weight: bold;
        font-size: 15pt;
        margin-bottom: 20px;
    }
    .print-section {
        margin-bottom: 20px;
    }
    .print-section-title {
        font-weight: bold;
        margin-bottom: 10px;
    }
    .print-row {
        display: flex;
        justify-content: space-between;
    }
    .print-col {
        width: 48%;
    }
    .print-indent {
        padding-left: 20px;
    }
    .print-footer {
        display: flex;
        justify-content: flex-end;
        margin-top: 40px;
        text-align: center;
    }
    .print-footer-right {
        width: 50%;
    }
    .print-signature-title {
        margin-top: 5px;
    }
}

